# TPP_Engine

./: .gitignore  BUG_FIX_REPORT.md  CHANGELOG.md  COORDINATE_SYSTEM_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NORMAL_FIX_REPORT.md  README.md  TEST_CHECKLIST.md  cam_service.pb.cc  cam_service.pb.h  cam_service.proto  cam_service_pb2.py  cam_service_pb2_grpc.py  rebuild.sh  test_bugs.py  test_cache.py  test_comparison.py  test_coordinate_gui.py  test_coordinate_system.py  verify_fixes.py
.kiro/settings/: lsp.json
.kiro/steering/: Rules.md
cpp_server/: CMakeLists.txt  cam_service.grpc.pb.cc  cam_service.grpc.pb.h  cam_service.pb.cc  cam_service.pb.h  server.cpp
docs/: GIT_COMMIT_LOG.md  PHASE1_SUMMARY.md  程序脚本设计和生产规范0.a.md
docs/dev/: 2026-02-28-bug-fixes.md  2026-02-28-color-scheme.md  2026-02-28-display-mode.md  2026-02-28-feature-update.md  2026-02-28-gui-development.md  2026-02-28-large-file-optimization.md  2026-02-28-progress-feedback.md  2026-02-28-surface-toolpath.md  2026-02-28-ui-improvements.md  2026-02-28-verification-report.md  2026-03-02-toolpath-export.md
mock_cam/: CMakeLists.txt  README.md  mock_cam.cpp  mock_cam.h
python_client/: README.md  cam_calculator.py  client.py  gui_client.py  motion_script_generator.py  test_normals.py
python_client/testparts/: BsplineSurface01.stp  叶片曲面01.stp  叶片曲面03_回环曲面.stp
